--- a/WpfAsistente/Properties/Resources.resx
+++ b/WpfAsistente/Properties/Resources.resx
@@ -133,12 +133,6 @@
   <data name="Tiempo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Tiempo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Volver" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Volver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Zocalo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Zocalo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="_1_Info_Search" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1_Info-Search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -168,5 +162,11 @@
   </data>
   <data name="bot_sacarselfie" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bot_sacarselfie.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Volver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Volver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Zocalo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Resources\zocalo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
